--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Tinkoff_news</string>
+    <string name="app_name">Tinkoff Новости</string>
     <string name="url">https://api.tinkoff.ru/v1/news/</string>
+    <string name="url_newsletter">https://api.tinkoff.ru/v1/</string>
 </resources>
